# argus-glueservice-stubs

./: .gitignore  README.rst
cron/: README.rst
cron/heartbeat/: pyproject.toml
cron/heartbeat/src/: argus_heartbeat.py
cron/minimalistic/: pyproject.toml
cron/minimalistic/src/: argus_minimalistic.py
cron/moonphase/: pyproject.toml
cron/moonphase/src/: argus_moonphase.py
supervised/: README.rst
supervised/pomodoro/: pyproject.toml
supervised/pomodoro/src/: argus_pomodoro.py
supervised/pomodoro/systemd/: README.rst  argus_pomodoro.service
