[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "argus_moonphase"
authors = [{name = "Hanne Moa", email = "hanne.moa@sikt.no"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
    "pyargus",
    "moontool",
]

[project.scripts]
argus-moonphase = "argus_moonphase:main"


[project.urls]
Home = "https://github.com/Uninett/argus-glueservice-stubs/"
